--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "tanstack_learn",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite --port 3000",
-    "build": "vite build && tsc",
-    "preview": "vite preview",
-    "test": "vitest run",
-    "format": "biome format",
-    "lint": "biome lint",
-    "check": "biome check"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/react-devtools": "^0.7.0",
-    "@tanstack/react-query": "^5.90.16",
-    "@tanstack/react-query-devtools": "^5.91.2",
-    "@tanstack/react-router": "^1.132.0",
-    "@tanstack/react-router-devtools": "^1.145.7",
-    "@tanstack/react-table": "^8.21.3",
-    "@tanstack/router-plugin": "^1.132.0",
-    "axios": "^1.13.2",
-    "http-status-codes": "^2.3.0",
-    "lucide-react": "^0.545.0",
-    "motion": "^12.24.3",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tailwindcss": "^4.0.6",
-    "zod": "^4.3.5"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.2.4",
-    "@tanstack/devtools-vite": "^0.3.11",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
-    "@vitejs/plugin-react": "^5.0.4",
-    "jsdom": "^27.0.0",
-    "typescript": "^5.7.2",
-    "vite": "^7.1.7",
-    "vitest": "^3.0.5",
-    "web-vitals": "^5.1.0"
-  }
+	"name": "tanstack_learn",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"predev": "node scripts/generate-image-map.js",
+		"dev": "vite --port 3000",
+		"build": "vite build && tsc",
+		"preview": "vite preview",
+		"test": "vitest run",
+		"format": "biome format",
+		"lint": "biome lint",
+		"check": "biome check",
+		"generate:images": "node scripts/generate-image-map.js"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.0.6",
+		"@tanstack/react-devtools": "^0.7.0",
+		"@tanstack/react-query": "^5.90.16",
+		"@tanstack/react-query-devtools": "^5.91.2",
+		"@tanstack/react-router": "^1.132.0",
+		"@tanstack/react-router-devtools": "^1.145.7",
+		"@tanstack/react-table": "^8.21.3",
+		"@tanstack/router-plugin": "^1.132.0",
+		"axios": "^1.13.2",
+		"http-status-codes": "^2.3.0",
+		"lucide-react": "^0.545.0",
+		"motion": "^12.24.3",
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
+		"tailwindcss": "^4.0.6",
+		"zod": "^4.3.5"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.2.4",
+		"@tanstack/devtools-vite": "^0.3.11",
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/react": "^16.2.0",
+		"@types/node": "^22.10.2",
+		"@types/react": "^19.2.0",
+		"@types/react-dom": "^19.2.0",
+		"@vitejs/plugin-react": "^5.0.4",
+		"jsdom": "^27.0.0",
+		"typescript": "^5.7.2",
+		"vite": "^7.1.7",
+		"vitest": "^3.0.5",
+		"web-vitals": "^5.1.0"
+	}
 }
