--- a/biome.json
+++ b/biome.json
@@ -20,11 +20,22 @@
 		"enabled": true,
 		"indentStyle": "tab"
 	},
+
 	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"nursery": {
+				"useSortedClasses": {
+					"level": "error",
+					"fix": "safe",
+					"options": {
+						"attributes": ["classList"],
+						"functions": ["clsx", "cva", "tw", "tw.*"]
+					}
+				}
+			}
 		}
 	},
 	"javascript": {
